--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
       </ion-thumbnail>
       <h2>{{current.title}}</h2>
       <p> {{current.author}}, {{current.date}}</p>
-      <button ion-button clear item-end>View</button>
+      <button ion-button clear item-end [navPush]="PushPage" [navParams]="{film:current}" >View</button>
     </ion-item>
   </ion-list>
 
