--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -14,5 +14,15 @@
 
 
 <ion-content padding>
-
+  <ion-card>
+    <img [src]="film.image"/>
+    <ion-card-content>
+      <ion-card-title>
+        {{film.title}}
+        </ion-card-title>
+      <p>
+        {{film.author}}, {{film.date}}
+      </p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
